--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -123,3 +123,34 @@ h1,h2,h3,h4,h5,h6{
 	-ms-transition: all 0.3s ease;
 	transition: all 0.3s easet;
 }
+
+/**
+* Menu rules
+**/
+#admin a {
+	text-decoration: none; 
+	color:#0051AA;
+} 
+#admin a:hover {
+	color:#8EC5FF;
+} 
+#admin {
+	width: 100%; 
+	height: 100px; 
+	background: #308AEE url(logo.png) no-repeat 10px center; 
+	color: #fff; 
+	padding : 10px;
+} 
+#menu { 
+	width: 158px;
+	height: 35px; 
+	background: #308AEE;
+	color: #fff; 
+	float: right; 
+	margin: -50px 0; 
+	line-height: 35px; 
+	text-align: center;
+} 
+#menu:hover { 
+	background: #5DA8F7;
+}
