--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -137,7 +137,7 @@ h1,h2,h3,h4,h5,h6{
 #admin {
 	width: 100%; 
 	height: 100px; 
-	background: #308AEE url(logo.png) no-repeat 10px center; 
+	background: #308AEE url(../img/logo.png) no-repeat 10px center; 
 	color: #fff; 
 	padding : 10px;
 } 
